Components/DirectXSoundSystem/DirectSoundNativeWrapper/DirectSoundNativeWrapper.h

typedef unsigned int uint;
EXPORT int NIDirectSoundBuffer_GetStatus( IDirectSoundBuffer* _this, LPDWORD pdwStatus )
{
	return _this->GetStatus(pdwStatus);
}
EXPORT int NIDirectSoundBuffer_Lock( IDirectSoundBuffer* _this, uint dwOffset, uint dwBytes,
	LPVOID* ppvAudioPtr1, LPDWORD pdwAudioBytes1,
	LPVOID* ppvAudioPtr2, LPDWORD pdwAudioBytes2, uint dwFlags )
{
	return _this->Lock(dwOffset, dwBytes, ppvAudioPtr1, pdwAudioBytes1,
		ppvAudioPtr2, pdwAudioBytes2, dwFlags);
}
EXPORT int NIDirectSoundBuffer_Unlock( IDirectSoundBuffer* _this, LPVOID pvAudioPtr1,
	uint dwAudioBytes1, LPVOID pvAudioPtr2, uint dwAudioBytes2 )
{
	return _this->Unlock(pvAudioPtr1, dwAudioBytes1, pvAudioPtr2, dwAudioBytes2);
}
EXPORT int NIDirectSoundBuffer_Play( IDirectSoundBuffer* _this, uint dwReserved1,
	uint dwPriority, uint dwFlags )
{
	return _this->Play(dwReserved1, dwPriority, dwFlags);
}
EXPORT int NIDirectSoundBuffer_GetCurrentPosition( IDirectSoundBuffer* _this,
	LPDWORD pdwCurrentPlayCursor, LPDWORD pdwCurrentWriteCursor )
{
	return _this->GetCurrentPosition(pdwCurrentPlayCursor, pdwCurrentWriteCursor);
}
EXPORT int NIDirectSoundBuffer_SetCurrentPosition( IDirectSoundBuffer* _this,
	uint dwNewPosition )
{
	return _this->SetCurrentPosition(dwNewPosition);
}
EXPORT int NIDirectSoundBuffer_SetFormat( IDirectSoundBuffer* _this, 
	LPCWAVEFORMATEX pcfxFormat )
{
	return _this->SetFormat(pcfxFormat);
}
EXPORT int NIDirectSoundBuffer_GetVolume( IDirectSoundBuffer* _this, LPLONG plVolume )
{
	return _this->GetVolume(plVolume);
}
EXPORT int NIDirectSoundBuffer_SetVolume( IDirectSoundBuffer* _this, int lVolume )
{
	return _this->SetVolume(lVolume);
}
EXPORT int NIDirectSoundBuffer_SetPan( IDirectSoundBuffer* _this, int lPan )
{
	return _this->SetPan(lPan);
}
EXPORT int NIDirectSoundBuffer_SetFrequency( IDirectSoundBuffer* _this, uint dwFrequency )
{
	return _this->SetFrequency(dwFrequency);
}
EXPORT int NIDirectSoundBuffer_Stop( IDirectSoundBuffer* _this )
{
	return _this->Stop();
}
EXPORT int NIDirectSoundBuffer_Restore( IDirectSoundBuffer* _this )
{
	return _this->Restore();
}
///////////////////////////////////////////////////////////////////////////////////////////////

EXPORT uint NIDirectSound3DBuffer8_Release( IDirectSound3DBuffer8* _this )
{
	return _this->Release();
}
EXPORT int NIDirectSound3DBuffer8_SetPosition( IDirectSound3DBuffer8* _this,
	float x, float y, float z, uint dwApply )
{
	return _this->SetPosition(x, y, z, dwApply);
}
EXPORT int NIDirectSound3DBuffer8_SetVelocity( IDirectSound3DBuffer8* _this,
	float x, float y, float z, uint dwApply )
{
	return _this->SetVelocity(x, y, z, dwApply);
}
EXPORT int NIDirectSound3DBuffer8_SetMinDistance( IDirectSound3DBuffer8* _this,
	float flMinDistance, uint dwApply )
{
	return _this->SetMinDistance(flMinDistance, dwApply);
}
///////////////////////////////////////////////////////////////////////////////////////////////

EXPORT uint NIDirectSoundCapture8_Release( IDirectSoundCapture8* _this )
{
	return _this->Release();
}
EXPORT int NIDirectSoundCapture8_CreateCaptureBuffer( IDirectSoundCapture8* _this,
	LPCDSCBUFFERDESC pcDSCBufferDesc, LPDIRECTSOUNDCAPTUREBUFFER* ppDSCBuffer, 
	LPUNKNOWN pUnkOuter )
{
	return _this->CreateCaptureBuffer(pcDSCBufferDesc, ppDSCBuffer, pUnkOuter);
}
///////////////////////////////////////////////////////////////////////////////////////////////

EXPORT uint NIDirectSoundCaptureBuffer_Release( IDirectSoundCaptureBuffer* _this )
{
	return _this->Release();
}
EXPORT int NIDirectSoundCaptureBuffer_GetCaps( IDirectSoundCaptureBuffer* _this, 
	LPDSCBCAPS pDSCBCaps )
{
	return _this->GetCaps(pDSCBCaps);
}
EXPORT int NIDirectSoundCaptureBuffer_GetCurrentPosition( IDirectSoundCaptureBuffer* _this,
	LPDWORD pdwCapturePosition, LPDWORD pdwReadPosition )
{
	return _this->GetCurrentPosition(pdwCapturePosition, pdwReadPosition);
}
EXPORT int NIDirectSoundCaptureBuffer_Lock( IDirectSoundCaptureBuffer* _this, 
	uint dwOffset, uint dwBytes, LPVOID* ppvAudioPtr1, LPDWORD pdwAudioBytes1,
	LPVOID* ppvAudioPtr2, LPDWORD pdwAudioBytes2, uint dwFlags )
{
	return _this->Lock(dwOffset, dwBytes, ppvAudioPtr1, pdwAudioBytes1,
		ppvAudioPtr2, pdwAudioBytes2, dwFlags);
}
EXPORT int NIDirectSoundCaptureBuffer_Unlock( IDirectSoundCaptureBuffer* _this, 
	LPVOID pvAudioPtr1, uint dwAudioBytes1, LPVOID pvAudioPtr2, uint dwAudioBytes2 )
{
	return _this->Unlock(pvAudioPtr1, dwAudioBytes1, pvAudioPtr2, dwAudioBytes2);
}
EXPORT int NIDirectSoundCaptureBuffer_Start( IDirectSoundCaptureBuffer* _this, uint dwFlags )
{
	return _this->Start(dwFlags);
}
EXPORT int NIDirectSoundCaptureBuffer_Stop( IDirectSoundCaptureBuffer* _this )
{
	return _this->Stop();
}