Components/DirectXSoundSystem/DirectXSoundSystem/DirectSoundNativeWrapper.cs


		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_GetStatus", CallingConvention = Wrapper.convention )]
		public unsafe static extern int GetStatus( void*/*IDirectSoundBuffer*/ _this,
			out uint pdwStatus );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_Lock", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Lock( void*/*IDirectSoundBuffer*/ _this,
			uint dwOffset, uint dwBytes, void** ppvAudioPtr1, uint* pdwAudioBytes1,
			void** ppvAudioPtr2, uint* pdwAudioBytes2, uint dwFlags );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_Unlock", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Unlock( void*/*IDirectSoundBuffer*/ _this, void* pvAudioPtr1,
			uint dwAudioBytes1, void* pvAudioPtr2, uint dwAudioBytes2 );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_Play", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Play( void*/*IDirectSoundBuffer*/ _this, uint dwReserved1,
			uint dwPriority, uint dwFlags );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_GetCurrentPosition", CallingConvention = Wrapper.convention )]
		public unsafe static extern int GetCurrentPosition( void*/*IDirectSoundBuffer*/ _this,
			uint* pdwCurrentPlayCursor, uint* pdwCurrentWriteCursor );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_SetCurrentPosition", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetCurrentPosition( void*/*IDirectSoundBuffer*/ _this,
			uint dwNewPosition );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_SetFormat", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetFormat( void*/*IDirectSoundBuffer*/ _this,
			ref WAVEFORMATEX pcfxFormat );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_GetVolume", CallingConvention = Wrapper.convention )]
		public unsafe static extern int GetVolume( void*/*IDirectSoundBuffer*/ _this,
			out int plVolume );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_SetVolume", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetVolume( void*/*IDirectSoundBuffer*/ _this, int lVolume );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_SetPan", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetPan( void*/*IDirectSoundBuffer*/ _this, int lPan );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_SetFrequency", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetFrequency( void*/*IDirectSoundBuffer*/ _this,
			uint dwFrequency );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_Stop", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Stop( void*/*IDirectSoundBuffer*/ _this );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundBuffer_Restore", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Restore( void*/*IDirectSoundBuffer*/ _this );
	}

	////////////////////////////////////////////////////////////////////////////////////////////////

	struct IDirectSound3DBuffer8
	{
		[DllImport( Wrapper.library, EntryPoint = "NIDirectSound3DBuffer8_Release", CallingConvention = Wrapper.convention )]
		public unsafe static extern uint Release( void*/*IDirectSound3DBuffer8*/ _this );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSound3DBuffer8_SetPosition", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetPosition( void*/*IDirectSound3DBuffer8*/ _this,
			float x, float y, float z, uint dwApply );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSound3DBuffer8_SetVelocity", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetVelocity( void*/*IDirectSound3DBuffer8*/ _this,
			float x, float y, float z, uint dwApply );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSound3DBuffer8_SetMinDistance", CallingConvention = Wrapper.convention )]
		public unsafe static extern int SetMinDistance( void*/*IDirectSound3DBuffer8*/ _this,
			float flMinDistance, uint dwApply );
	}

	////////////////////////////////////////////////////////////////////////////////////////////////

	struct IDirectSoundCapture8
	{
		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCapture8_Release", CallingConvention = Wrapper.convention )]
		public unsafe static extern uint Release( void*/*IDirectSoundCapture8*/ _this );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCapture8_CreateCaptureBuffer", CallingConvention = Wrapper.convention )]
		public unsafe static extern int CreateCaptureBuffer( void*/*IDirectSoundCapture8*/ _this,
			ref DSCBUFFERDESC pcDSCBufferDesc,
			out void*/*IDirectSoundCaptureBuffer*/ ppDSCBuffer,
			void* pUnkOuter );
	}

	////////////////////////////////////////////////////////////////////////////////////////////////

	struct IDirectSoundCaptureBuffer
	{
		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCaptureBuffer_Release", CallingConvention = Wrapper.convention )]
		public unsafe static extern uint Release( void*/*IDirectSoundCaptureBuffer*/ _this );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCaptureBuffer_GetCaps", CallingConvention = Wrapper.convention )]
		public unsafe static extern int GetCaps( void*/*IDirectSoundCaptureBuffer*/ _this,
			ref DSCBCAPS pDSCBCaps );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCaptureBuffer_GetCurrentPosition", CallingConvention = Wrapper.convention )]
		public unsafe static extern int GetCurrentPosition( void*/*IDirectSoundCaptureBuffer*/ _this,
			uint* pdwCapturePosition, uint* pdwReadPosition );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCaptureBuffer_Lock", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Lock( void*/*IDirectSoundCaptureBuffer*/ _this,
			uint dwOffset, uint dwBytes,
			void** ppvAudioPtr1, uint* pdwAudioBytes1,
			void** ppvAudioPtr2, uint* pdwAudioBytes2, uint dwFlags );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCaptureBuffer_Unlock", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Unlock( void*/*IDirectSoundCaptureBuffer*/ _this,
			void* pvAudioPtr1, uint dwAudioBytes1,
			void* pvAudioPtr2, uint dwAudioBytes2 );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCaptureBuffer_Start", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Start( void*/*IDirectSoundCaptureBuffer*/ _this, 
			uint dwFlags );

		[DllImport( Wrapper.library, EntryPoint = "NIDirectSoundCaptureBuffer_Stop", CallingConvention = Wrapper.convention )]
		public unsafe static extern int Stop( void*/*IDirectSoundCaptureBuffer*/ _this );
	}

	////////////////////////////////////////////////////////////////////////////////////////////////

}
